tests/flow/node_tests/process/process.js
/* @flow */

(process.allowedNodeEnvironmentFlags: Set<string>);

(process.allowedNodeEnvironmentFlags: string); // error
